# ChangeLog for net-im/pidgin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.102 2009/06/21 04:12:58 tester Exp $

*pidgin-2.5.7 (21 Jun 2009)

  21 Jun 2009; Olivier Crête <tester@gentoo.org> +pidgin-2.5.7.ebuild:
  Version bump

  25 May 2009; Brent Baude <ranger@gentoo.org> pidgin-2.5.6.ebuild:
  Marking pidgin-2.5.6 ppc64 and ppc for bug 270811

  23 May 2009; Raúl Porcel <armin76@gentoo.org> pidgin-2.5.6.ebuild:
  alpha/ia64/sparc stable wrt #270811

  23 May 2009; Markus Meier <maekke@gentoo.org> pidgin-2.5.6.ebuild:
  x86 stable, bug #270811

  23 May 2009; Tobias Heinlein <keytoaster@gentoo.org> pidgin-2.5.6.ebuild:
  amd64 stable wrt security bug #270811

  23 May 2009; Jeroen Roovers <jer@gentoo.org> pidgin-2.5.6.ebuild:
  Stable for HPPA (bug #270811).

*pidgin-2.5.6 (22 May 2009)

  22 May 2009; Olivier Crête <tester@gentoo.org> +pidgin-2.5.6.ebuild:
  Version bump, bug #270811

*pidgin-2.5.5-r1 (23 Apr 2009)

  23 Apr 2009; Olivier Crête <tester@gentoo.org>
  -files/pidgin-2.5.2-asneeded.patch,
  -files/pidgin-2.5.4-icq-messages-magic.patch,
  +files/pidgin-2.5.5-msnm.patch, -pidgin-2.5.2.ebuild,
  +pidgin-2.5.5-r1.ebuild:
  Add patch for msn taking 100% CPU, bug #266877. Remove old versions

  25 Mar 2009; Raúl Porcel <armin76@gentoo.org> pidgin-2.5.5.ebuild:
  ia64/sparc stable wrt #261950

  22 Mar 2009; Tobias Klausmann <klausman@gentoo.org> pidgin-2.5.5.ebuild:
  Stable on alpha, bug #261950

  22 Mar 2009; Markus Meier <maekke@gentoo.org> pidgin-2.5.5.ebuild:
  x86 stable, bug #261950

  21 Mar 2009; Jeremy Olexa <darkside@gentoo.org> pidgin-2.5.5.ebuild:
  amd64 stable, bug 261950

  20 Mar 2009; Jeroen Roovers <jer@gentoo.org> pidgin-2.5.5.ebuild:
  Stable for HPPA (bug #261950).

  20 Mar 2009; Brent Baude <ranger@gentoo.org> pidgin-2.5.5.ebuild:
  Marking pidgin-2.5.5 ppc64 and ppc for bug 261950
