@@ -1,11 +1,10 @@
 AUX pidgin-2.5.4-icq.patch 833 RMD160 fa1813c84006d0e6f10c37b84a51bb856797e01b SHA1 d57523cfe93ac77964e347ce418ebd796997c879 SHA256 816a80b180bb1ea51a9332777620f99e1539d7373e5e0f3c653908f20e381487
 AUX pidgin-2.5.5-msnm.patch 748 RMD160 ea73e3035f5c2a7c7426164c96e9dbf2d5af835d SHA1 9fd56288c29fc70d0747b4a8bdef6cad8498c6d6 SHA256 d41d2935dfa4a3a2cae970ba65369cde9a708fadeae01e9802cc411e17d62955
-DIST pidgin-2.5.5.tar.bz2 8357209 RMD160 b7d37b73b9cced0f399cbc233c7ee0cdcf33e582 SHA1 a99ef50504b2b5f4014bfad232957322829d568f SHA256 cb5a13b99c2868b61d7f790678e1b3d3055eb9bf56c369a0eab90aa3fa7723e8
 DIST pidgin-2.5.6.tar.bz2 8546152 RMD160 0299efe337a2c43ae2d096978e43e551bcb76ee0 SHA1 7394b885774f15e2ae8e6713fbbf5e142de818dd SHA256 9b407f46041e922a82a10a8050ab7229d3f97f0c294afefb19f6875f2f589a02
 DIST pidgin-2.5.7.tar.bz2 8462821 RMD160 0453d5bf283fb8eb0651ef5989236ba38355b7ef SHA1 be1913739febd3c367011615f349cba563a06a51 SHA256 3b5fb99da81dcb2a53c2a56e40c6fe1d35b9fb12422491ececa42323511b0c93
-EBUILD pidgin-2.5.5-r1.ebuild 4622 RMD160 c38e0d13b13353d24fe1a88b5bd3d3cf019d6362 SHA1 c8ff8aaca55ccbb4bf416377a6b1632cd90d770f SHA256 c99201187e0f930ecd5c5a73e9062e71e254fae4e973bfd7d10940610e149d79
-EBUILD pidgin-2.5.5.ebuild 4582 RMD160 868b891e51cbdfb712cb64f34aa7c2c348fd2b4f SHA1 2ce1b6d80c269af8ab1db28179f164acb6dec94e SHA256 0dd763e6f88306fd87ff5f16773f78ec82e2b3b32a0e77e9c7806bd910be97e6
+DIST pidgin-2.5.8.tar.bz2 8246538 RMD160 b13108331a3da1639f30a76984c3c09529b7d5aa SHA1 672f7e16c429c210f33f2499520c436db4e2384c SHA256 2f79da1f127dd05f9404494ebc794f8cda919764fd2424f79df31f3b0f9dfd21
 EBUILD pidgin-2.5.6.ebuild 4581 RMD160 c34dac4c69e4215a56e11e160e92905bc25241d3 SHA1 e045974d2e79928eebc1d6783d36afb38cd42e47 SHA256 3fce78acba648eff89083ecb7a0fb39a59866471835b705a548682f344569f85
-EBUILD pidgin-2.5.7.ebuild 4581 RMD160 eef31d94bd31909de1ced3361a1e6740fbab619e SHA1 b3165abdb310f10410a213e68ebae74351d55a6c SHA256 ead6e42937d2d042110474dc1a7bc3b3c7b4b94d69b701a3fe4987fa37c7e052
-MISC ChangeLog 13940 RMD160 39c778b49cc06a54d64b5ac26310ce677ec5b781 SHA1 68b25dc7af756f1b79256994cd3a33e972a17ef6 SHA256 28d87ab88dcc1c960ec071e79df9e3648c1bf9fb0a9abd45fb73a312d453b7f7
+EBUILD pidgin-2.5.7.ebuild 4726 RMD160 be846a0638864edd36b78b81e5aefec7188e5b1b SHA1 a0bbc784bcd69f79d6c78a67f006d1563f7c8b61 SHA256 2e8eb206aa8b0462a371b153d211a533dfcf012d3858f6c7b054aaf90add40b4
+EBUILD pidgin-2.5.8.ebuild 4518 RMD160 5145c5fcd2e8787ae345a84cd8a103c0cfc42e17 SHA1 529c2151f02036812b0ca198bc1553dc2d385e81 SHA256 e0a1bcf2d60da9af021e29ad9d7f5d141d38a74c4e173a22e2f63fc409a68ca9
+MISC ChangeLog 14249 RMD160 acc688e94f9eaa7f9c93327cbe08d7080d464ee7 SHA1 c78151bfeb32541d3b3de2ae1d8ce6b94dc4ee48 SHA256 e41aa1385facadd5b44ebe04f2a1bf4ea64f905a76e4c7737708b9f6d910ed81
 MISC metadata.xml 989 RMD160 7d97c83fcb6e8189dabc908c7c4b12ebf16b7ccc SHA1 a0faafa7c0d1c8835141709e61c6205c503481bb SHA256 4f5d2e541300302662d3fcec49b74723ff00c4803cf88e522545dc9f3e0cad0f
