@@ -1,6 +1,15 @@
 # ChangeLog for net-im/pidgin
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.102 2009/06/21 04:12:58 tester Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/pidgin/ChangeLog,v 1.104 2009/06/29 23:21:35 tester Exp $
+
+*pidgin-2.5.8 (29 Jun 2009)
+
+  29 Jun 2009; Olivier Crête <tester@gentoo.org> +pidgin-2.5.8.ebuild:
+  Version bump
+
+  29 Jun 2009; Olivier Crête <tester@gentoo.org> -pidgin-2.5.5.ebuild,
+  -pidgin-2.5.5-r1.ebuild, pidgin-2.5.7.ebuild:
+  Fix translations installation, bug #275051, also remove old versions
 
 *pidgin-2.5.7 (21 Jun 2009)
 
